# hamilton-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg
hamilton_hooks/: cli_command.py  common.py  validate_dag.py  view_dag.py
hooks/: cli_command.py
scripts/: view_dag.py
testing/resources/: invalid_module.py  valid_module_v1  valid_module_v1.py  valid_module_v2.py
tests/: validate_dag_test.py  view_dag_test.py
