[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "hamilton-hooks"
version = "0.1.0"
description = "pre-commit hooks for Hamilton"
readme = "README.md"
keywords = [
    "pre-commit",
    "hamilton",
    "data-science",
    "orchestration",
    "developer-tools",
    "machine-learning",
    "mlops",
]
license = { text = "MIT" }
authors = [{ name = "Thierry Jean"}]
requires-python = ">=3.8"
dependencies = [
    "sf-hamilton[cli] >= 1.51",

]

[project.scripts]
cli-command = "hamilton_hooks.cli_command:main"
view-dag = "hamilton_hooks.view_dag:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "testing", "testing.*"]
namespaces = false
