[metadata]
name = hamilton_hooks
version = 0.0.1
description = pre-commit hooks for Hamilton.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thierry Jean
license = MIT

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    hamilton-view-dag = hamilton_hooks.view_dag:main

[bdist_wheel]
universal = True